# PrintingRates

./: .gitignore  CMakeLists.txt  LICENSE.txt  Printing Rates.emmx  build.ps1  build.sh  generate_release_notes.ps1  generated_release_notes.md  install.sh  installer.iss  manifest.json  readme.md  release_notes.md  release_template.md  update_installer.ps1  update_repository.ps1
.github/workflows/: build-release.yml
Include/Utils/: DashboardWidget.h  EVariantMap.h  FixedLabel.h  JsonSettings.h  ModOrderedMap.h  ModQComboBox.h  ModQMap.h  ModQSpinBox.h  ModQTableWidget.h  errorhdlr.h
cmake/: PruneInstall.cmake
config/: config.xml
repository/: 2024-10-06-1212_meta.7z  2025-02-01-2220_meta.7z  2025-02-01-2228_meta.7z  2025-03-25-2112_meta.7z  2025-03-25-2259_meta.7z  2025-03-25-2313_meta.7z  2025-03-27-0039_meta.7z  2025-03-27-0046_meta.7z  2025-03-27-0826_meta.7z  2025-03-27-2349_meta.7z  Updates.xml
repository/com.mainprogram/: 0.0.4bin.7z.sha1  0.0.4meta.7z  0.0.4translations.7z  0.0.4translations.7z.sha1  v0.0.5bin.7z.sha1  v0.0.5meta.7z  v0.0.5translations.7z  v0.0.5translations.7z.sha1  v0.0.6bin.7z.sha1  v0.0.6meta.7z  v0.0.6translations.7z  v0.0.6translations.7z.sha1
repository/com.vendor.root/: 0.0.2bin.7z.sha1  0.0.2meta.7z  0.0.2translations.7z  0.0.2translations.7z.sha1  0.0.3bin.7z.sha1  0.0.3meta.7z  0.0.3translations.7z  0.0.3translations.7z.sha1  0.0.4bin.7z.sha1  0.0.4meta.7z  0.0.4translations.7z  0.0.4translations.7z.sha1  0.1.0-1bin.7z.sha1  0.1.0-1meta.7z  0.1.0-1translations.7z  0.1.0-1translations.7z.sha1
scripts/: README-Boost-Windows.md  bump_version.ps1  deploy.sh  generate_release_notes.ps1  install-boost-windows.ps1  readme.md  release_notes.md  release_template.md  run.sh  update_installer.ps1  update_repository.ps1  version.ps1
src/: CMakeLists.txt  CMakeLists.txt.user.ad7e4ef  DashboardWidget.cpp  DashboardWidget.h  config.json  config_out.json  main.cpp  resource.qrc  settings.ini
src/Include/Utils/: DashboardWidget.h  EVariantMap.h  JsonSettings.h  ModOrderedMap.h  ModQSpinBox.h  ModQTableWidget.h  errorhdlr.h
src/Utils/: DashboardWidget.cpp  EVariantMap.h  FixedLabel.cpp  FixedLabel.h  JsonSettings.cpp  JsonSettings.h  ModOrderedMap.cpp  ModOrderedMap.h  ModQComboBox.cpp  ModQComboBox.h  ModQMap.cpp  ModQMap.h  ModQSpinBox.cpp  ModQTableWidget.cpp  ModQTableWidget.h  Settings.cpp  Settings.h  errorhdlr.cpp  errorhdlr.h  pch.h
src/icons/: Printing Rates.rc  resource.qrc
